--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="bg-model">
 								<div class="bg-content">
 												<div class="close">+</div>
-												<img class="logo" src="./img/logo.jpg" alt="logo">
+												<img class="logo" src="img/logo.jpg" alt="logo">
 												<input type="text" placeholder="Full Name">
 												<input type="email" placeholder="Email">
 												<input type="password" placeholder="Password">
